--- a/README.adoc
+++ b/README.adoc
@@ -1,12 +1,12 @@
-Hat tip: This started out as a fork of [https://github.com/lodestone/hyper-hacks]. Thanks @lodestone!
-
-= hyper-hacks
-
-Here are my macOS Sierra hacks using some combination of Karabiner-Elements and Hammerspoon
+These are my macOS shortcut hacks using some combination of Karabiner-Elements and Hammerspoon.
 
 == Background:
 
+Hat tip: This started out as a fork of [https://github.com/lodestone/hyper-hacks]. Thanks @lodestone!
+
 http://brettterpstra.com/2012/12/08/a-useful-caps-lock-key/[Hyper key hack]
+
+Check out the link:https://github.com/lodestone/hyper-hacks/wiki[Wiki] for ideas on how to configure your `init.lua`.
 
 == Installation:
 
@@ -17,7 +17,18 @@ http://brettterpstra.com/2012/12/08/a-useful-caps-lock-key/[Hyper key hack]
 
 That's pretty much it.
 
-s is still fairly simplistic, but it works for me right now.
+== Configuration:
 
-Check out the link:https://github.com/lodestone/hyper-hacks/wiki[Wiki] for ideas on how to configure your `init.lua`.
-
+* The current configuration assumes that `CapsLock` has been disabled in System Preferences.
+* The `CapsLock` key is defined as a new `HYPER` key (`Cmd`, `Option`, `Shift`, `Control`).
+* The following shortcuts are defined to launch an app, or focus if it is already running:
+** `HYPER+O`: "Microsoft Outlook"
+** `HYPER+F`: "Finder"
+** `HYPER+E`: "Sublime Text"
+** `HYPER+S`: "Slack"
+** `HYPER+C`: "Google Chrome"
+* The following general shortcuts are defined:
+** `HYPER+H`: Hide all windows.
+** `HYPER+T`: Invoke iTerm2 visor (hotkey full-screen terminal window).
+** `HYPER+L`: Lock screen.
+* If `HYPER` is pressed on its own, it emulates `ESCAPE`.
